--- a/app/styles/work.css
+++ b/app/styles/work.css
@@ -124,8 +124,17 @@ hr {
     width: 100%;
   }
 
+  .workTitle {
+    font-size: 3em;
+  }
+
+  .workDesc{
+    font-size: 2em;
+  }
+
   .l2Text, .devolunteerText, .gentlyPetsText{
     width: 100%;
+    font-size: 2.5em;
   }
 
   .l2Image{
